Still trying to fix scroll jump on mobile

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -59,7 +59,7 @@
   position: fixed;
   left: 0px;
   width: 100%;
-  height: calc(100vh - 82px);
+  height: 100%;//calc(100vh - 82px);
   top: 82px;
   transition: opacity 0.5s;
   filter: alpha(opacity=0);
